[tool.poetry]
name = "test examples"
version = "0.1.0"
description = ""
authors = ["maarten-betman <maarten.betman@boskalis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.12.1"
pytest-profiling = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
